Did the basic styles for the calculator

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
         <div id="calculator">
             <div id="display"></div>
             <div id="keyboard">
-                <button id="btn-clear">C</button>
-                <button id="btn-backspace"><=</button>
-                <button id="btn-percent">%</button>
-                <button id="btn-divide">/</button>
-                <button id="btn-7">7</button>
-                <button id="btn-8">8</button>
-                <button id="btn-9">9</button>
-                <button id="btn-multiply">x</button>
-                <button id="btn-4">4</button>
-                <button id="btn-5">5</button>
-                <button id="btn-6">6</button>
-                <button id="btn-minus">-</button>
-                <button id="btn-1">1</button>
-                <button id="btn-2">2</button>
-                <button id="btn-3">3</button>
-                <button id="btn-plus">+</button>
-                <button id="btn-0">0</button>
-                <button id="btn-dot">.</button>
-                <button id="btn-equals">=</button>
+                <button class="calc-btn" id="btn-clear">C</button>
+                <button class="calc-btn" id="btn-backspace"><=</button>
+                <button class="calc-btn" id="btn-percent">%</button>
+                <button class="calc-btn" id="btn-divide">/</button>
+                <button class="calc-btn" id="btn-7">7</button>
+                <button class="calc-btn" id="btn-8">8</button>
+                <button class="calc-btn" id="btn-9">9</button>
+                <button class="calc-btn" id="btn-multiply">x</button>
+                <button class="calc-btn" id="btn-4">4</button>
+                <button class="calc-btn" id="btn-5">5</button>
+                <button class="calc-btn" id="btn-6">6</button>
+                <button class="calc-btn" id="btn-minus">-</button>
+                <button class="calc-btn" id="btn-1">1</button>
+                <button class="calc-btn" id="btn-2">2</button>
+                <button class="calc-btn" id="btn-3">3</button>
+                <button class="calc-btn" id="btn-plus">+</button>
+                <button class="calc-btn" id="btn-0">0</button>
+                <button class="calc-btn" id="btn-dot">.</button>
+                <button class="calc-btn" id="btn-equals">=</button>
             </div>
         </div>
     </div>
