--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="calculator">
-            <div id="display"></div>
+            <textarea name="display" id="display"></textarea>
             <div id="keyboard">
                 <button class="calc-btn" id="btn-clear">C</button>
                 <button class="calc-btn" id="btn-backspace"><=</button>
