--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <textarea name="display" id="display"></textarea>
             <div id="keyboard">
                 <button class="calc-btn" id="btn-clear">C</button>
-                <button class="calc-btn" id="btn-backspace"><=</button>
+                <button class="calc-btn" id="btn-backspace">⌫</button>
                 <button class="calc-btn" id="btn-percent">%</button>
                 <button class="calc-btn" id="btn-divide">/</button>
                 <button class="calc-btn" id="btn-7">7</button>
