refactored the code a little bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="calculator">
-            <textarea name="display" id="display"></textarea>
+            <input type="text" name="display" id="display">
             <div id="keyboard">
                 <button class="calc-btn" id="btn-clear">C</button>
                 <button class="calc-btn" id="btn-backspace">⌫</button>
